<resources>
    <string name="app_name">内存泄漏模拟工具</string>
    <string name="JavaHeap_imitation">模拟Java内存泄漏</string>
    <string name="JavaHeap_imitation_string">创建对象</string>
    <string name="JavaHeap_imitation_openfile">打开文件流</string>
    <string name="JavaHeap_imitation_3">内部类</string>
    <string name="NativeHeap_imitation">模拟Native内存泄漏</string>
    <string name="Native_imitation_malloc">调用malloc</string>
    <string name="Native_imitation_BitMap">创建BitMap</string>
    <string name="Set_amount">设置内存泄漏总量: </string>
    <string name="Set_time">设置泄漏持续时长: </string>
    <string name="MB">MB</string>
    <string name="s">s</string>
    <string name="start">开始模拟</string>
    <string name="end">结束测试</string>
    <string name="JavaHeap_tmp_amount">当前JavaHeap大小: </string>
    <string name="NativeHeap_tmp_amount">当前NativeHeap大小: </string>
    <string name="PSS_tmp_amount">当前PSS内存大小: </string>
    <string name="GPU_imitation">模拟GPU内存泄漏</string>
    <string name="Graphics_tmp_amount">当前Graphics内存大小: </string>
    <string name="ION_imitation">模拟ION内存泄漏</string>
    <string name="ION_tmp_amount">当前ION内存大小: </string>
    <string name="blank">   </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>