<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back"
            android:scaleType="fitStart"
            android:background="@color/white">

        </ImageButton>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/NativeHeap_imitation"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/Set_amount"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="bottom|end"/>

        <EditText
            android:id="@+id/Native_edittext_MB"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="bottom|start"
            android:inputType="number"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/MB"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="bottom|start"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/Set_time"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="bottom|end"/>

        <EditText
            android:id="@+id/Native_edittext_s"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="bottom|start"
            android:inputType="number"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/s"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="bottom|start"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom|center">

        <Button
            android:id="@+id/start"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="top|center">

        <Button
            android:id="@+id/end"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="@string/NativeHeap_tmp_amount"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="bottom|end"/>

        <TextView
            android:id="@+id/NativeHeapAmount"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/blank"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="bottom|center"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/MB"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="bottom|start"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="@string/PSS_tmp_time"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="bottom|end"/>

        <TextView
            android:id="@+id/NativePSSAmount"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/blank"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="bottom|center"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/MB"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="bottom|start"/>

    </LinearLayout>



</LinearLayout>