<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back"
            android:scaleType="fitStart"
            android:background="@color/white">

        </ImageButton>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="bottom|center">

        <Button
            android:id="@+id/JavaHeapImitationString"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/JavaHeap_imitation_string"
            android:textSize="20sp"
            android:textAllCaps="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center">

        <Button
            android:id="@+id/JavaHeapImitationOpenfile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/JavaHeap_imitation_openfile"
            android:textSize="20sp"
            android:textAllCaps="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="top|center">

        <Button
            android:id="@+id/JavaHeapImitationInnerclass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/JavaHeap_imitation_3"
            android:textSize="20sp"
            android:textAllCaps="false"/>

    </LinearLayout>





</LinearLayout>