<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="bottom|center">

        <Button
            android:id="@+id/JavaHeap_imitation"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/JavaHeap_imitation"
            android:textSize="20sp"
            android:textAllCaps="false"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center">

        <Button
            android:id="@+id/NativeHeap_imitation"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/NativeHeap_imitation"
            android:textSize="20sp"
            android:textAllCaps="false"/>

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="200dp"-->
<!--        android:gravity="top|center">-->

<!--        <Button-->
<!--            android:id="@+id/ION_imitation"-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/ION_imitation"-->
<!--            android:textSize="20sp"-->
<!--            android:textAllCaps="false"/>-->

<!--    </LinearLayout>-->



</LinearLayout>
